[gd_scene load_steps=32 format=3 uid="uid://rdglfbq61btc"]

[ext_resource type="Script" path="res://Instances/Enemies/LowOrcN/LowOrcN.gd" id="1_v5u44"]
[ext_resource type="Shader" path="res://Scripts/Shaders/Flash.gdshader" id="2_0f6yl"]
[ext_resource type="Resource" uid="uid://c02atp32fln73" path="res://Instances/Resources/Bullets/BulletE1.tres" id="2_bxnmk"]
[ext_resource type="PackedScene" uid="uid://b4asjdyoyep5s" path="res://Instances/Components/Health/Health.tscn" id="5_ybllr"]
[ext_resource type="Texture2D" uid="uid://58xehv4u4pdu" path="res://Instances/Enemies/LowOrcN/low-orcN.png" id="5_ynp2t"]
[ext_resource type="PackedScene" uid="uid://6fcg84clxst2" path="res://Instances/Components/Death/DeathManager.tscn" id="6_y0wxg"]
[ext_resource type="AudioStream" uid="uid://hhj8od3wlwnn" path="res://Instances/Enemies/Audio/enemyHit.ogg" id="7_3v1x2"]
[ext_resource type="PackedScene" uid="uid://bjwrgsdbjvqw3" path="res://Instances/Components/DeathEffect/DeathExplosion.tscn" id="7_0143p"]
[ext_resource type="PackedScene" uid="uid://of0xsffqavim" path="res://Instances/Components/EnemyDeath/EnemyDeath.tscn" id="8_3sbaw"]
[ext_resource type="PackedScene" uid="uid://dx8h735nl0e2d" path="res://Instances/Components/Move/Move.tscn" id="8_irqj0"]
[ext_resource type="PackedScene" uid="uid://cwyxu1ysjtku7" path="res://Instances/Components/DropXp/DropXp.tscn" id="8_pw8x6"]
[ext_resource type="PackedScene" uid="uid://bjsnss7q14dlj" path="res://Instances/Components/SpawnerDamagePopup/SpawnerDamagePopup.tscn" id="8_s88il"]
[ext_resource type="AudioStream" uid="uid://dmup1gun0pjth" path="res://Instances/Enemies/Audio/Explosion_04.mp3" id="9_bpqu5"]
[ext_resource type="PackedScene" uid="uid://bjq2iuiw53hdd" path="res://Instances/Enemies/Behaviours/DeslocateToPlayer/DeslocateToPlayer.tscn" id="9_v5oo8"]
[ext_resource type="PackedScene" uid="uid://c1sky0kyn05tc" path="res://Instances/Components/PlayerTracker/PlayerTracker.tscn" id="10_25ldp"]
[ext_resource type="PackedScene" uid="uid://bfeok0rvx26n0" path="res://Instances/Components/ShockWave/ShockWave.tscn" id="11_5r17v"]
[ext_resource type="PackedScene" uid="uid://bcbgphbcmqgky" path="res://Instances/Components/KnockBack/KnockBack.tscn" id="12_hk3au"]
[ext_resource type="PackedScene" uid="uid://d1loimaxqs6y6" path="res://Instances/Components/LookAtPlayerComponent/LookAtPlayerComponent.tscn" id="13_8p1je"]
[ext_resource type="PackedScene" uid="uid://8mpq1pm143kp" path="res://Instances/Components/HealthBar/HealthBar.tscn" id="15_8376v"]
[ext_resource type="PackedScene" uid="uid://b4enx6olclngm" path="res://Instances/Components/FlashHit/FlashHit.tscn" id="16_n4vfa"]
[ext_resource type="Script" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="23_p6k64"]
[ext_resource type="Script" path="res://Instances/Enemies/Behaviours/States/IdleState.gd" id="24_oivwd"]
[ext_resource type="Script" path="res://Instances/Components/AttackManager/AttackManager.gd" id="24_v8oh6"]
[ext_resource type="Script" path="res://Instances/Enemies/Behaviours/States/WalkState.gd" id="25_qy2sl"]
[ext_resource type="PackedScene" uid="uid://mdy0tyhdn2cm" path="res://Instances/AttackPaterns/LinePatern/line_patern.tscn" id="25_sjry3"]
[ext_resource type="Script" path="res://Instances/Enemies/Behaviours/States/AttackState.gd" id="26_eht7a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xek6w"]
radius = 7.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7meio"]
resource_local_to_scene = true
shader = ExtResource("2_0f6yl")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_w40n5"]
atlas = ExtResource("5_ynp2t")
region = Rect2(0, 0, 15, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_inkh6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w40n5")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_axq1k"]
radius = 5.0
height = 16.0

[node name="LowOrcN" type="CharacterBody2D" node_paths=PackedStringArray("moveComponent", "playerTracker", "healthManager", "attackManager")]
collision_layer = 0
collision_mask = 32
script = ExtResource("1_v5u44")
moveComponent = NodePath("Move")
playerTracker = NodePath("PlayerTracker")
healthManager = NodePath("Health")
attackManager = NodePath("AttackManager")
orcLowBulletStats = ExtResource("2_bxnmk")
timeIdle = 1.0
lifeBase = 80.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_xek6w")

[node name="GroupFlip" type="Node2D" parent="."]

[node name="LookAtPlayerComponent" parent="GroupFlip" node_paths=PackedStringArray("playerTracker") instance=ExtResource("13_8p1je")]
playerTracker = NodePath("../../PlayerTracker")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="GroupFlip"]
y_sort_enabled = true
material = SubResource("ShaderMaterial_7meio")
sprite_frames = SubResource("SpriteFrames_inkh6")
animation = &"Idle"
centered = false
offset = Vector2(-8.062, -20.028)
flip_h = true

[node name="Health" parent="." node_paths=PackedStringArray("deathManager", "knockBack", "flashHit", "lifeBar") instance=ExtResource("5_ybllr")]
position = Vector2(0, -8)
collision_layer = 8
collision_mask = 0
deathManager = NodePath("../DeathManager")
knockBack = NodePath("../KnockBack")
flashHit = NodePath("../FlashHit")
lifeBar = NodePath("../HealthBar")
hitAudio = ExtResource("7_3v1x2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Health"]
shape = SubResource("CapsuleShape2D_axq1k")
debug_color = Color(0, 0.6, 0, 0.419608)

[node name="SpawnerDamagePopup" parent="Health" instance=ExtResource("8_s88il")]
position = Vector2(0, -6)

[node name="DeslocateToPlayer" parent="." instance=ExtResource("9_v5oo8")]
position = Vector2(0, -8)

[node name="FlashHit" parent="." node_paths=PackedStringArray("animatedSprite") instance=ExtResource("16_n4vfa")]
animatedSprite = NodePath("../GroupFlip/AnimatedSprite2D")

[node name="DeathManager" parent="." instance=ExtResource("6_y0wxg")]
position = Vector2(0, -8)
deathAudio = ExtResource("9_bpqu5")

[node name="DeathExplosion" parent="DeathManager" instance=ExtResource("7_0143p")]

[node name="DropXp" parent="DeathManager" instance=ExtResource("8_pw8x6")]
position = Vector2(0, 8)
xpAmount = 2

[node name="EnemyDeath" parent="DeathManager" instance=ExtResource("8_3sbaw")]
position = Vector2(0, 8)

[node name="ShockWave" parent="DeathManager" instance=ExtResource("11_5r17v")]
position = Vector2(0, 8)

[node name="Move" parent="." instance=ExtResource("8_irqj0")]
position = Vector2(0, -8)

[node name="PlayerTracker" parent="." instance=ExtResource("10_25ldp")]
position = Vector2(0, -8)

[node name="KnockBack" parent="." instance=ExtResource("12_hk3au")]

[node name="HealthBar" parent="." instance=ExtResource("15_8376v")]
modulate = Color(0.909804, 0, 0, 1)
offset_left = -9.0
offset_top = -20.0
offset_right = 182.0
offset_bottom = 7.0
fill_mode = 1

[node name="FiniteStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("23_p6k64")

[node name="IdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("24_oivwd")
next_state = NodePath("../AttackState")

[node name="WalkState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("25_qy2sl")
next_state = NodePath("../IdleState")

[node name="AttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("26_eht7a")
next_state = NodePath("../WalkState")

[node name="AttackManager" type="Node2D" parent="."]
script = ExtResource("24_v8oh6")

[node name="LinePatern" parent="AttackManager" instance=ExtResource("25_sjry3")]
bullet = ExtResource("2_bxnmk")
